@@ -4,6 +4,7 @@ import java.io.File;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -32,12 +33,23 @@ public class FileTaskHW {
 //            }
 //        }
 
-        final List<String> txt = Files.list(Path.of("d:\\redmi 7 06052022\\Documents"))
-                .map(a -> a.getFileName().toString())
-                .filter(a -> a.endsWith("pdf"))
+        final List<Path> pdf = Files.list(Path.of("d:\\redmi 7 06052022\\Documents"))
+//                .map(a -> a.getFileName().toString())
+//                .filter(a -> a.endsWith("pdf"))
+//                .map(a -> Paths.get(a))
                 .collect(Collectors.toList());
 
 
-        System.out.println("collect = " + txt);
+//        System.out.println("pdf = " + pdf);
+
+        Path path = pdf.get(0);
+            System.out.format("toString: %s%n", path.toString());
+            System.out.format("getFileName: %s%n", path.getFileName());
+            System.out.format("getName(0): %s%n", path.getName(0));
+            System.out.format("getNameCount: %d%n", path.getNameCount());
+            System.out.format("subpath(0,2): %s%n", path.subpath(0,2));
+            System.out.format("getParent: %s%n", path.getParent());
+            System.out.format("getRoot: %s%n", path.getRoot());
+
     }
 }
